--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,8 @@ AllCops:
     - "config.ru"
     - "db/migrate/**/*"
     - "test/**/*"
+    - "spec/rails_helper.rb"
+    - "spec/spec_helper.rb"
 
   DisplayCopNames: true
 
