--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
     - "test/**/*"
     - "spec/rails_helper.rb"
     - "spec/spec_helper.rb"
+    - "db/seeds.rb"
 
   DisplayCopNames: true
 
